ya desplegado en el vps, pero me falta ver como estan los datos